--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,3 +27,8 @@ body{
 ::-webkit-scrollbar-thumb:hover {
   background: radial-gradient(circle at 24.1% 68.8%, rgb(50, 50, 50) 0%, rgb(0, 0, 0) 99.4%);
 }
+
+
+.bg-morphism{
+@apply bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-10 hover:bg-gray-600/10 border-gray-800 
+}
